Added a bunch of stuff
